# 25-Vision-LiuXiang

./: .gitignore  华南虎视觉组夏令营任务报告书模板.md
ArmorDetectingAndCal/: CHANGELOG.md  README.md  (+1 more)
ArmorDetectingAndCal/detect/: CMakeLists.txt  test_light_descriptor.cpp
ArmorDetectingAndCal/detect/LightDescriptor/: CMakeLists.txt
ArmorDetectingAndCal/detect/LightDescriptor/include/: LightDescriptor.h
ArmorDetectingAndCal/detect/LightDescriptor/src/: LightDescriptor.cpp
ArmorDetectingAndCal/detect/calculate/: CMakeLists.txt
ArmorDetectingAndCal/detect/calculate/include/: calculate.h
ArmorDetectingAndCal/detect/calculate/src/: calculate.cpp
ArmorDetectingAndCal/detect/detect_light/: CMakeLists.txt
ArmorDetectingAndCal/detect/detect_light/include/: detect_light.h
ArmorDetectingAndCal/detect/detect_light/src/: detect_light.cpp
ArmorDetectingAndCal/detect/match_light/: CMakeLists.txt
ArmorDetectingAndCal/detect/match_light/include/: match_light.h
ArmorDetectingAndCal/detect/match_light/src/: match_light.cpp
CMakeSkeletonBuilding/CMake_I/: .gitignore  CMakeLists.txt  README.md  main.cpp
CMakeSkeletonBuilding/CMake_I/common/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/common/kalman/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/common/math/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/common/math/include/: Math.h
CMakeSkeletonBuilding/CMake_I/common/math/src/: Math.cpp
CMakeSkeletonBuilding/CMake_I/modules/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/modules/A1/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/modules/A1/include/: A1.h
CMakeSkeletonBuilding/CMake_I/modules/A1/src/: A11.cpp  A12.cpp  A13.cpp
CMakeSkeletonBuilding/CMake_I/modules/A2/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/modules/A2/include/: A2.h
CMakeSkeletonBuilding/CMake_I/modules/A2/src/: A2.cpp
CMakeSkeletonBuilding/CMake_I/modules/M1/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/modules/M1/include/: M1.h
CMakeSkeletonBuilding/CMake_I/modules/M1/src/: M1.cpp
CMakeSkeletonBuilding/CMake_I/modules/M2/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_I/modules/M2/include/: M2.h
CMakeSkeletonBuilding/CMake_I/modules/M2/src/: M2.cpp
CMakeSkeletonBuilding/CMake_II/: CMakeLists.txt  README.md  client.cpp  server.cpp
CMakeSkeletonBuilding/CMake_II/common/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/common/rmath/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/common/rmath/include/robotlab/: rmath.h
CMakeSkeletonBuilding/CMake_II/common/rmath/src/: rmath.cpp
CMakeSkeletonBuilding/CMake_II/common/singleton/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/common/singleton/include/robotlab/: singleton.hpp
CMakeSkeletonBuilding/CMake_II/modules/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/modules/assembly1/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/modules/assembly1/include/robotlab/: assembly1.h
CMakeSkeletonBuilding/CMake_II/modules/assembly1/src/: assembly1.cpp
CMakeSkeletonBuilding/CMake_II/modules/assembly1/test/: CMakeLists.txt  assembly1_test.cpp
CMakeSkeletonBuilding/CMake_II/modules/assembly2/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/modules/assembly2/include/robotlab/: assembly2.h
CMakeSkeletonBuilding/CMake_II/modules/assembly2/src/: assembly2.cpp
CMakeSkeletonBuilding/CMake_II/modules/module1/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/modules/module1/include/robotlab/: module1.hpp
CMakeSkeletonBuilding/CMake_II/modules/module1/include/robotlab/module1/: module1a.h  module1b.h
CMakeSkeletonBuilding/CMake_II/modules/module1/src/module1a/: m1.cpp  m2.cpp  m3.cpp  m4.cpp
CMakeSkeletonBuilding/CMake_II/modules/module1/src/module1b/: module1b.cpp
CMakeSkeletonBuilding/CMake_II/modules/module2/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_II/modules/module2/include/robotlab/: opcua_cs.hpp
CMakeSkeletonBuilding/CMake_II/modules/module2/src/: argument.cpp  client.cpp  object.cpp  open62541.c  server.cpp  variable.cpp
CMakeSkeletonBuilding/CMake_III/: .gitignore  CMakeLists.txt  README.md
CMakeSkeletonBuilding/CMake_III/cmake/: SRVLCompilerOptions.cmake  SRVLVersion.cmake
CMakeSkeletonBuilding/CMake_III/cmake/paragen/: para_generator.cmake
CMakeSkeletonBuilding/CMake_III/cmake/paragen/runtime/: para_generator_header.in  para_generator_module.in  para_generator_source.in
CMakeSkeletonBuilding/CMake_III/modules/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_III/modules/core/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_III/modules/core/include/srvl/: core.hpp
CMakeSkeletonBuilding/CMake_III/modules/core/src/: core.cpp  serial.cpp  thread_pool.cpp  timer.cpp
CMakeSkeletonBuilding/CMake_III/modules/dataio/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_III/modules/dataio/include/srvl/: dataio.hpp
CMakeSkeletonBuilding/CMake_III/modules/dataio/src/: dataio.cpp
CMakeSkeletonBuilding/CMake_III/modules/filter/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_III/modules/filter/include/srvl/: filter.hpp
CMakeSkeletonBuilding/CMake_III/modules/filter/src/: fitsine.cpp
CMakeSkeletonBuilding/CMake_III/modules/imgproc/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_III/modules/imgproc/include/srvl/: imgproc.hpp
CMakeSkeletonBuilding/CMake_III/modules/imgproc/src/: pretreat.cpp
CMakeSkeletonBuilding/CMake_III/modules/imgproc/test/: test_paint.cpp  test_pretreat.cpp
CMakeSkeletonBuilding/CMake_III/modules/ml/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_III/modules/ml/include/srvl/: ml.hpp
CMakeSkeletonBuilding/CMake_III/modules/ml/src/ort/: ort.cpp  ort_print.cpp
CMakeSkeletonBuilding/CMake_III/modules/para/include/srvlpara/: loader.hpp
CMakeSkeletonBuilding/CMake_III/samples/: CMakeLists.txt
CMakeSkeletonBuilding/CMake_III/samples/version/: CMakeLists.txt  sample_version.cpp
CUDA_resize/: .gitignore  CMakeLists.txt  README.md  compare  compare.cpp  main.cpp
CUDA_resize/processor/: CMakeLists.txt
CUDA_resize/processor/include/: processer.h  processer_cuda_fun.cuh
CUDA_resize/processor/src/: processer_cuda_fun.cu  processor.cu
KeyPointsDetection/test/: CMakeLists.txt  test.cpp
(+57 files in other folders)
